# sottovoce

./: .env-default  .gitignore  AGENTS.md  LICENSE  example-prompts.md  main.py  pyproject.toml  readme.md
src/: __init__.py  app.py  builders.py  config.py  console.py  filteredWarnings.py  llm_client.py  memory_manager.py  parameters.py  recorder.py  session_logger.py  trascribe.py  tts_engine.py  types.py
tests/: test_config.py  test_main.py  test_recorder.py
