[project]
name = "sottovoce"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.0.2",
    "openai-whisper>=20250625",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "setuptools>=58,<65",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "webrtcvad>=2.0.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
